--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "@prisma/client": "^6.8.1",
     "antd": "^5.25.1",
+    "framer-motion": "^12.12.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
