--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.8.1",
     "antd": "^5.25.1",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.12.0",
     "next": "15.3.2",
     "react": "^19.0.0",
