--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
     "@prisma/client": "^6.8.1",
-    "antd": "^5.25.1",
+    "antd": "^5.25.4",
+    "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.12.0",
     "next": "15.3.2",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0",
-    "zod": "^3.25.49",
+    "zod": "^3.25.51",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
@@ -39,7 +40,7 @@
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "prisma": "^6.8.2",
+    "prisma": "^6.9.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
